# XEphem

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README.md  XEphem.in  aclocal.m4  configure  configure.ac  earthmenu.c  index.html  meson.build  meson_options.txt  xephem.desktop  xephem.spec
.github/workflows/: ci.yml
Containers/docker-ubuntu-14.04/: run
Containers/docker-ubuntu-20.04/: run
Containers/docker-ubuntu-21.04/: run
Containers/docker-ubuntu-22.04/: Dockerfile  run
GUI/xephem/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.rej  aavso.c  annotmenu.c  broadcast.c  calmenu.c  closemenu.c  compiler.c  coordsmenu.c  datamenu.c  db.c  dbmenu.c  earthmenu.c  fallbacks.c  favmenu.c  formats.c  fsmenu.c  gallerymenu.c  glance.c  gsc.c  gscnet.c  helpmenu.c  homeio.c  hznmenu.c  imregmenu.c  indimenu.c  jupmenu.c  listmenu.c  mainmenu.c  marsmenu.c  marsmmenu.c  meson.build  moonmenu.c  moviemenu.c  msgmenu.c  net.h  netmenu.c  (+43 more)
GUI/xephem/auxil/: astorb2edb.pl  jupiter.2040  mpcorb2edb.pl  xephem_sites
GUI/xephem/fifos/: Makefile.am  Makefile.in
GUI/xephem/help/: xephem.html
GUI/xephem/tools/xedb/: README
GUI/xephem/tools/xephemdbd/: INSTALL
Site/: INDI.html  changes.html  download.html  earthsat.html  faq.html  intro.html  mailbag.html  sun.html
Site/contrib/: contrib.html
Site/help/: png  xephem.html
Tools/: check-version.sh
desktopfiles/: Makefile  io.github.xephem.metainfo.xml  xephem.desktop  xephem.metainfo.xml
libastro/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  anomaly.c  astro.h  constel.c  earthsat.c  eclipse.c  eclipse.h  eclipses.c  magdecl.c  meson.build  misc.c  plans.c  precess.c  riset_cir.c  sun.c  vsop87.c  vsop87.h  vsop87_ear.c  vsop87_jup.c  vsop87_mar.c  vsop87_mer.c  vsop87_nep.c  vsop87_sat.c  vsop87_ura.c  vsop87_ven.c
libastro/tools/data/: SHA512SUMS.eclipse
libastro/tools/eclipse/: README.txt  inex_list.c  makefile
libip/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  explodegif.c  fits.c  fsmatch.c  lstsqr.c  meson.build  wcs.c
libjpegd/: CMakeLists.txt  meson.build
liblilxml/: CMakeLists.txt  Makefile.am  Makefile.in  meson.build
libpng/: CMakeLists.txt  meson.build  pngconf.h
libz/: CMakeLists.txt  meson.build
scripts/: cppcheck.sh
src/GUI/xephem/: Makefile  indiapi.h  netmenu.c  scope.c  webdbmenu.c
src/GUI/xephem/auxil/: astorb2edb.pl
src/GUI/xephem/help/: xephem.html
src/libastro/: circum.c  plans.c
src/tests/: .gitignore  output.expected
system_integration/Linux/share/applications/: io.github.xephem.desktop
tests/: Makefile  output.expected  test.c
