# $Header$

# lib_LTLIBRARIES = libastro.la
noinst_LTLIBRARIES = libastro.la

libastro_la_SOURCES =  \
        aa_hadec.c      \
        aberration.c    \
        actan.c         \
        airmass.c       \
        anomaly.c       \
        ap_as.c         \
        astro.h \
        atlas.c         \
        auxil.c         \
        bdl.c bdl.h          \
        chap95.c chap95.h        \
        chap95_data.c   \
        circum.c        \
        comet.c         \
        constel.c       \
        dbfmt.c         \
        deep.c deepconst.h         \
        deltat.c        \
        earthsat.c      \
        eq_ecl.c        \
        eq_gal.c        \
        formats.c       \
        helio.c         \
        jupmoon.c       \
        libration.c     \
        magdecl.c       \
        marsmoon.c      \
        misc.c          \
        mjd.c           \
        moon.c          \
        mooncolong.c    \
        moonnf.c        \
        nutation.c      \
        obliq.c         \
        parallax.c      \
        parallactic.c   \
        plans.c         \
        plmoon.c        \
        plshadow.c      \
        preferences.h       \
        precess.c       \
        reduce.c        \
        refract.c       \
        rings.c         \
        riset.c         \
        riset_cir.c     \
        satspec.h sattypes.h satlib.h      \
        satmoon.c       \
        sdp4.c          \
        sgp4.c          \
        sphcart.c       \
        sun.c           \
        thetag.c        \
        utc_gst.c       \
        umoon.c         \
        twobody.c       \
        vector.h        \
        vsop87.c vsop87.h       \
        vsop87_data.c
