libastro_src = [
  'aa_hadec.c',
  'aberration.c',
  'actan.c',
  'airmass.c',
  'anomaly.c',
  'ap_as.c',
  'atlas.c',
  'auxil.c',
  'bdl.c',
  'chap95.c',
  'chap95_data.c',
  'circum.c',
  'comet.c',
  'constel.c',
  'dbfmt.c',
  'deep.c',
  'deltat.c',
  'earthsat.c',
  'eq_ecl.c',
  'eq_gal.c',
  'formats.c',
  'helio.c',
  'jupmoon.c',
  'libration.c',
  'magdecl.c',
  'marsmoon.c',
  'misc.c',
  'mjd.c',
  'moon.c',
  'mooncolong.c',
  'moonnf.c',
  'nutation.c',
  'obliq.c',
  'parallactic.c',
  'parallax.c',
  'plans.c',
  'plmoon.c',
  'plshadow.c',
  'precess.c',
  'reduce.c',
  'refract.c',
  'rings.c',
  'riset.c',
  'riset_cir.c',
  'satmoon.c',
  'sdp4.c',
  'sgp4.c',
  'sphcart.c',
  'sun.c',
  'thetag.c',
  'twobody.c',
  'umoon.c',
  'utc_gst.c',
  'vsop87.c',
  'vsop87_data.c',
]

libastro_inc = include_directories('./')

libastro = static_library('astro', libastro_src,
                          include_directories : libastro_inc)

