# $Header$

# lib_LTLIBRARIES = libip.la
noinst_LTLIBRARIES = libip.la

libip_la_SOURCES =  \
	explodegif.c    \
	fits.c          \
	fsmatch.h fsmatch.c       \
	gaussfit.c      \
	ip.h \
	lstsqr.c        \
	median.c        \
	sqr.c           \
	stars.c         \
	stats.c         \
	walk.c          \
	wcs.c

libip_la_CFLAGS = -I../libastro

