libjpegd_src = [
   'jcomapi.c',
   'jdapimin.c',
   'jdapistd.c',
   'jdatasrc.c',
   'jdcoefct.c',
   'jdcolor.c',
   'jddctmgr.c',
   'jdhuff.c',
   'jdinput.c',
   'jdmainct.c',
   'jdmarker.c',
   'jdmaster.c',
   'jdmerge.c',
   'jdphuff.c',
   'jdpostct.c',
   'jdsample.c',
   'jerror.c',
   'jidctflt.c',
   'jidctfst.c',
   'jidctint.c',
   'jidctred.c',
   'jmemmgr.c',
   'jmemnobs.c',
   'jquant1.c',
   'jquant2.c',
   'jutils.c',
]

libjpeg = static_library('jpegd', libjpegd_src)
