libpng_src = [
   'png.c',
   'pngerror.c',
   'pngget.c',
   'pngmem.c',
   'pngpread.c',
   'pngread.c',
   'pngrio.c',
   'pngrtran.c',
   'pngrutil.c',
   'pngset.c',
   'pngtrans.c',
   'pngwio.c',
   'pngwrite.c',
   'pngwtran.c',
   'pngwutil.c',
]

libpng = static_library('png', libpng_src)
