install_man('xephem.1')
install_data('XEphem.png', install_dir: get_option('datadir') / 'pixmaps')
install_subdir('auxil', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('catalogs', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('fifos', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('fits', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('gallery', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('help', install_dir: xephem_data_dir, strip_directory : false)
install_subdir('lo', install_dir: xephem_data_dir, strip_directory : false)
